Modificar directiva para cambiar el colorcito, que rico jijiijij

--- a/src/app/products/pages/product-page/product-page.component.html
+++ b/src/app/products/pages/product-page/product-page.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="col-auto">
-      <span customLabel></span>
+      <span customLabel [colorDir]="color"><b>Temporal</b></span>
     </div>
 
   </div>
