Directiva para errores finalizada

--- a/src/app/products/pages/product-page/product-page.component.html
+++ b/src/app/products/pages/product-page/product-page.component.html
@@ -14,7 +14,9 @@
     </div>
 
     <div class="col-auto">
-      <span customLabel [colorDir]="color"><b>Temporal</b></span>
+      <span customLabel [colorDir]="color" [errors]="myForm.get('name')?.errors">
+        <b></b>
+      </span>
     </div>
 
   </div>
