--- a/src/app/signals/pages/user-info-page/user-info-page.component.html
+++ b/src/app/signals/pages/user-info-page/user-info-page.component.html
@@ -12,13 +12,13 @@
 
   <div class="col-8" *ngIf="currentUser()">
     <h3>Usuario</h3>
-    <p>Email: {{currentUser()?.email }} </p>
-    <p>Nombre: {{ currentUser()?.first_name }} {{ currentUser()?.last_name }} </p>
+    <p><b>Email:</b> {{currentUser()!.email }} </p>
+    <p><b>Nombre:</b> {{ fullName() }} </p>
 
     <img [src]="currentUser()?.avatar" alt="Avatar" class="rounded">
   </div>
 
-  <div class="col-8 text-danger">
+  <div class="col-8 text-danger" *ngIf="!userWasFound()">
     <h3>Usuario no encontrado</h3>
   </div>
 </div>
