--- a/src/app/signals/pages/properties-page/properties-page.component.html
+++ b/src/app/signals/pages/properties-page/properties-page.component.html
@@ -1,1 +1,34 @@
-<p>properties-page works!</p>
+<h1>Mutaciones</h1>
+<hr />
+
+<div class="row">
+  <div class="col-6">
+    <input
+      type="text"
+      class="form-control mb-3"
+      #txtEmail
+      (input)="onFieldUpdated('email', txtEmail.value)"
+    />
+
+    <input
+      type="text"
+      class="form-control mb-3"
+      #txtFirstName
+      (input)="onFieldUpdated('first_name', txtFirstName.value)"
+    />
+
+    <input
+      type="text"
+      class="form-control mb-3"
+      #txtLastName
+      (input)="onFieldUpdated('last_name', txtLastName.value)"
+    />
+  </div>
+
+  <div class="col-6">
+    <!-- Data del usuario -->
+    <pre>
+      {{ 'asd' }}
+    </pre>
+  </div>
+</div>
