Fin señales, Ejemplo de los efectos y su funcionalidad

--- a/src/app/signals/pages/properties-page/properties-page.component.html
+++ b/src/app/signals/pages/properties-page/properties-page.component.html
@@ -33,5 +33,8 @@
     <pre>
       {{ user() | json }}
     </pre>
+    {{ fullName() }}
+
+    <button class="btn btn-primary" (click)="increaseBy(+1)">+1</button>
   </div>
 </div>
